fixing z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,6 +105,7 @@ main {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 0;
 
   width: 100%;
   height: 100%;
